Fixing overflow issue on modal

--- a/client/src/css/flightresults.css
+++ b/client/src/css/flightresults.css
@@ -166,6 +166,8 @@ html{
     flex-flow: row wrap;
     gap: 0;
     font-size: .7em;
+    overflow-x: scroll;
+    max-height: 16rem;
 }
 .mobilerefinesections > label{
     max-width: 25%;
